Split cast functions into implicit, explicit, try cast functions.